# cortexos

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_SINGLE_PROMPT.md  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_KICKOFF.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PHASE_CHECKLISTS.md  LICENSE  MASTER_IMPLEMENTATION_BRIEF.md  Makefile  PHASE13_GAMES_CHECKLIST.md  PHASE14_AI_UX_AND_SAFETY_UX_CHECKLIST.md  PHASE1_BOOTSTRAP_CHECKLIST.md  PHASE2_RUST_FOUNDATION_CHECKLIST.md  PHASE4_IDENTITY_AND_POLICY_CHECKLIST.md  PHASE5_SETTINGS_AND_FILESYSTEM_CHECKLIST.md  PHASE6_AI_RUNTIME_CHECKLIST.md  PHASE7_COMMAND_BUS_CHECKLIST.md  PHASE8_WINDOW_MANAGER_AND_SHELL_CHECKLIST.md  PHASE9_APP_RUNTIME_CHECKLIST.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/ai-assistant/: index.html  package.json  vite.config.ts
apps/calculator-app/: index.html  manifest.json  package.json
apps/clock-utils-app/: index.html  manifest.json  package.json
apps/desktop-shell/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/file-manager-app/: index.html  manifest.json  package.json
apps/games-platform-app/: index.html  manifest.json  package.json
apps/media-viewer-app/: index.html  manifest.json  package.json
apps/notes-app/: index.html  package.json  (+1 more)
audit_issues/: CLAUDE_CODE_FILES_FIX_PROMPT.md  CLAUDE_CODE_MINIMIZE_FIX_PROMPT.md  CLAUDE_CODE_SETTINGS_THEME_FIX_PROMPT.md  CLAUDE_CODE_TASKBAR_RELAUNCH_FIX_PROMPT.md  ISSUE-001-window-launch-fails-because-shell-sends-floating-point-coordinates.md  ISSUE-002-successful-app-launches-can-leak-orphan-runtime-instances.md  ISSUE-003-window-iframes-point-to-non-routable-or-wrong-app-urls.md  ISSUE-004-launch-error-reporting-obscures-the-real-backend-failure.md  ISSUE-005-desktop-icon-launch-ux-is-misaligned-with-user-expectations.md  ISSUE-006-file-manager-root-path-contract-mismatch.md  ISSUE-007-minimized-window-remains-focused-and-focus-does-not-transfer.md  ISSUE-008-settings-app-theme-controls-are-local-only-and-do-not-update-shell-theme.md  ISSUE-009-pinned-taskbar-icon-does-not-relaunch-app-after-window-close.md  issues-list-index.md
change_requests/: CR-001-documentation-reality-drift.md  CR-002-release-gates-and-ci-mismatch.md  CR-003-dependency-graph-violations.md  CR-004-api-route-versioning-and-transport-drift.md  CR-005-session-auth-and-websocket-auth-drift.md  CR-006-manifest-schema-and-validation-gap.md  CR-007-first-party-app-and-shell-placeholder-gaps.md  CR-008-frontend-typecheck-and-test-harness-gap.md  CR-009-command-bus-and-runtime-implementation-gap.md  CR-010-repository-inventory-and-phase-claim-drift.md  CR-011-packaging-and-tooling-polish-gaps.md  CR-012-false-completion-ledger-and-unindexed-doc-gap.md  CR-013-remaining-spec-event-contract-drift.md  FINAL_AUDIT_CR-001-playwright-e2e-is-configured-but-not-green.md  FINAL_AUDIT_CR-002-status-docs-and-audit-layers-are-internally-inconsistent.md  FINAL_AUDIT_CR-003-auth-contract-fallbacks-and-stale-test-assumptions-remain.md  FINAL_AUDIT_INDEX_2026-03-31.md  FINAL_DELTA_CR-001-doc-baseline-still-not-fully-reconciled.md  FINAL_DELTA_CR-002-playwright-scope-is-green-but-narrower-than-claimed.md  FINAL_DELTA_INDEX_2026-03-31.md  FOLLOW_UP_CR-001-status-docs-not-refreshed-after-remediation.md  FOLLOW_UP_CR-002-cookie-auth-remediation-not-wired-end-to-end.md  FOLLOW_UP_CR-003-live-files-api-contract-drift-in-first-party-apps.md  FOLLOW_UP_CR-004-release-gates-still-missing-real-browser-e2e-and-cargo-audit.md  FOLLOW_UP_CR-005-superseded-auth-artifacts-and-mock-assumptions-remain.md  FOLLOW_UP_CR-006-event-and-workspace-contract-reconciliation-still-incomplete.md  FOLLOW_UP_INDEX_2026-03-31.md  INDEX.md  PATTERN_CHANGE_REQUESTS.md
crates/cortex-admin/: Cargo.toml
crates/cortex-admin/src/: constants.rs  error.rs  lib.rs  safe_mode.rs  service.rs  sqlite.rs  types.rs
crates/cortex-admin/src/export/: bundler.rs  mod.rs  redactor.rs
crates/cortex-admin/src/metrics/: collector.rs  mod.rs  ring_buffer.rs
crates/cortex-admin/src/recovery/: crash_handler.rs  factory_reset.rs  fs_check.rs  mod.rs  session.rs  settings_reset.rs
crates/cortex-ai/: Cargo.toml
crates/cortex-ai/src/: adapter.rs  error.rs  lib.rs  service.rs  sqlite.rs  types.rs
crates/cortex-api/: Cargo.toml
crates/cortex-api/src/: app_state.rs  bus.rs  error.rs  lib.rs  ws.rs
crates/cortex-api/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
crates/cortex-api/src/routes/: admin.rs  ai.rs  apps.rs  auth.rs  files.rs  mod.rs  notifications.rs  policy.rs  search.rs  settings.rs  wm.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: error.rs  ids.rs  lib.rs  types.rs
crates/cortex-db/: Cargo.toml
crates/cortex-db/migrations/: 0001_create_schema_version.down.sql  0001_create_schema_version.up.sql  0002_create_users.up.sql  0003_create_sessions.up.sql  0004_create_permissions.up.sql  0005_create_settings.up.sql  0006_create_files.up.sql  0007_create_notifications.up.sql  0008_create_apps.up.sql  0009_create_ai_config.up.sql  0010_create_audit_log.up.sql  0011_create_search_index.up.sql  0012_create_command_bus_events.up.sql
crates/cortex-db/src/: error.rs  lib.rs  migration.rs  types.rs
crates/cortex-observability/: Cargo.toml
crates/cortex-observability/src/: audit.rs  error.rs  lib.rs  logging.rs  types.rs
crates/cortex-policy/: Cargo.toml
crates/cortex-policy/src/: error.rs  lib.rs  service.rs  sqlite.rs  types.rs
crates/cortex-runtime/: Cargo.toml
crates/cortex-runtime/src/: error.rs  lib.rs  service.rs  sqlite.rs  types.rs
crates/cortex-search/: Cargo.toml
crates/cortex-search/src/: error.rs  lib.rs  service.rs  sqlite.rs  types.rs
crates/cortex-server/: Cargo.toml
crates/cortex-server/src/: main.rs
e2e/: package.json  playwright.config.ts
scripts/: dev.sh  migrate.sh  setup.sh
tests/e2e/: Cargo.toml  sqlite::memory:
tests/e2e/src/: api_contract.rs  health_check.rs  http_integration.rs  lib.rs
tools/: validate-manifests.sh
(+205 files in other folders)
