[package]
name = "cortex-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { workspace = true }
cortex-config = { workspace = true }
cortex-db = { workspace = true }
cortex-observability = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = "1"
tokio = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
