[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CortexOS shared types, error macros, and foundation primitives"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
