[package]
name = "cortex-db"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { workspace = true }
cortex-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
parking_lot = "0.12"
