[package]
name = "cortex-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { workspace = true }
cortex-config = { workspace = true }
cortex-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
cortex-db = { workspace = true }
