[package]
name = "cortex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cortex-core = { workspace = true }
cortex-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
