[package]
name = "cortex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cortex-server"
path = "src/main.rs"

[dependencies]
cortex-api = { workspace = true }
cortex-core = { workspace = true }
cortex-config = { workspace = true }
cortex-db = { workspace = true }
cortex-auth = { workspace = true }
cortex-notify = { workspace = true }
cortex-wm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
percent-encoding = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5" }
